# mykfc

./: .gitignore  README.md  backtest_config.json  diff.md  lerna.json  month_indexer.py  package.json  proc_entrust.py  proc_quote.py  proc_transaction.py  py_stg.py  scripts.js  unzip.py
.github/workflows/: release-verify.yml
data-clean/: parse_snaptshot.py  品种映射表.csv
kfx-report-factor/: package.json  pyproject.toml
kfx-report-factor/src/python/FactorReport/: __init__.py
matcher-example/: CMakeLists.txt  package.json
matcher-example/src/cpp/: simple_matcher.cpp
operator-custom/: CMakeLists.txt  package.json
operator-custom/src/cpp/: operator.cpp
report-py-example/: .gitignore  package.json
report-py-example/src/python/KungfuSimplePythonReport/: __init__.py
slice-tool-custom/: CMakeLists.txt  package.json
slice-tool-custom/src/cpp/: write_backtest_data.cpp
slice-tool-py/src/python/KungfuPythonSlicetool/: __init__.py  proc_entrust.py  proc_quote.py  proc_transaction.py
strategy-custom/: CMakeLists.txt  package.json
strategy-custom/src/cpp/: strategy.cpp
